--- a/index.html
+++ b/index.html
@@ -138,8 +138,9 @@
 						<div class="col-md-7">
 							<div class="project-section illustration">
 								<div class="project-section illustration-path">
-									<div class="project-section device-mockup"></div>
-									<div class="project-section award-badge"></div>
+									<div class="project-section device-mockup">
+                                        <div class="project-section award-badge"></div>
+                                    </div>								
 								</div>
 							</div>
 						</div>
@@ -185,18 +186,246 @@
 							</div>
 						</div>
 					</div>
-					<div class="service-section">
+					<div class="service-icons">
 						<div class="row">
-							<div class="col-md-3">1</div>
-							<div class="col-md-3">2</div>
-							<div class="col-md-3">3</div>
-							<div class="col-md-3">4</div>
+							<div class="col-md-3">
+                                <div class="service-icons discovery"></div>
+                                <div class="service-heading">Product Discovery</div>
+                                <div class="service-para">
+                                    <p>We help you with idea validation, product strategy, and how you can differentiate yourself
+                                        in the market </p>                                                                          
+                                </div>
+                            </div>
+							<div class="col-md-3">
+                                <div class="service-icons exp-design"></div>
+                                <div class="service-heading">Experience Design</div>
+                                <div class="service-para">
+                                    <p>We help you build compelling user-interfaces that solve your business problems.</p>                                        
+                                </div>
+                            </div>
+							<div class="col-md-3">
+                                <div class="service-icons product-eng"></div>
+                                <div class="service-heading">Product Engineering</div>
+                                <div class="service-para">
+                                    <p>Need a rockstar product team to augment your in-house capabilities? We can help! </p>                                                                              
+                                </div>
+                            </div>
+							<div class="col-md-3">
+                                <div class="service-icons mvp"></div>
+                                <div class="service-heading">MVP LAUNCH</div>
+                                <div class="service-para">
+                                    <p>If you have an idea on a napkin, we can help you quickly get to the market. </p>                                      
+                                </div>
+                            </div>
 						</div>
 					</div>
+                    <div class="cta">
+                        <a class="action-cta" href="#">
+                            View case study →
+                        </a>
+                    </div>
 				</div>
 			</div>
+            <div class="our-partners">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                                <div class="work-tag-line">
+                                    <h3 class="work-tag-line heading">WHO ARE OUR <del>CLIENTS</del><span class="quo-txt">PARTNERS</span></h3>
+                                    <h2 class="work-tag-line title-heading">
+                                        Since 2009, we're creating a better world with some of the most exciting startups 
+                                        and B2B companies 
+                                    </h2>
+                                </div>
+                         </div>
+                    </div>
+                    <div class="partners-logo">
+                        <div class="row">
+                            <div class="col-md-3">
+                                <div class="item-list">
+                                    <img class="partner-1" src="images/partners-logo/microsoft-colored.png" alt="amazing-partner" />
+                                </div>                                                                  
+                            </div>
+                            <div class="col-md-3">
+                                <div class="item-list">
+                                    <img class="partner-2" src="images/partners-logo/synaptics.png" alt="amazing-partner" />
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="item-list">
+                                    <img class="partner-3" src="images/partners-logo/goibibo.png" alt="amazing-partner" />
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="item-list">
+                                    <img class="partner-4" src="images/partners-logo/hCentive.png" alt="amazing-partner" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row custom-row">
+                            <div class="col-md-3">
+                                <div class="item-list">
+                                    <img class="partner-5" src="images/partners-logo/jasonLearning.png" alt="amazing-partner" />
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="item-list">
+                                    <img class="partner-6" src="images/partners-logo/mobileum.png" alt="amazing-partner" />
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="item-list">
+                                    <img class="partner-7" src="images/partners-logo/Catalog_Logotypemark_RGB_Charcoal.png" alt="amazing-partner" />
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="item-list">
+                                    <img class="partner-8" src="images/partners-logo/linklabs.png" alt="amazing-partner" />
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row custom-row">
+                            <div class="col-md-3">
+                                <div class="item-list">
+                                    <img class="partner-9" src="images/partners-logo/mettl.png" alt="amazing-partner" />
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="item-list">
+                                    <img class="partner-10" src="images/partners-logo/patternx.png" alt="amazing-partner" />
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="item-list">
+                                    <img class="partner-11" src="images/partners-logo/mPulse.png" alt="amazing-partner" />
+                                </div>
+                            </div>
+                            <div class="col-md-3">
+                                <div class="item-list">
+                                    <img class="partner-12" src="images/partners-logo/Canvera.png" alt="amazing-partner" />
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="partner-reviews">
+                <div class="container">
+                    <div class="row">
+                        <div class="col">
+                            <div class="work-tag-line">
+                                <h3 class="work-tag-line heading">WHAT MAKES US HAPPY</h3>
+                                <h2 class="work-tag-line title-heading">
+                                    Our partners are in a committed relationship with us
+                                </h2>
+                                <p class="work-tag-line para-detail">
+                                    Thanks to them, we don’t have a sales team ever since we started in 2009. 
+                                    In fact, more than 90% of our business comes through referrals. Unbelievable, right? But it’s true!
+                                </p>
+                          </div>
+                    </div>
+                </div>
+                    <div class="testimonials-wrapper">    
+                        <div class="row">
+                                <div class="video-testimonial">
+                                    <div class="placeholder-img">
+                                        <img src="images/partner.png" />
+                                    </div>
+                                    <div class="placeholder-container">
+                                        <div class="inner-text">
+                                            One of the biggest strengths of Quovantis is their collaborative nature and the way they take ownership. 
+                                            They stick to deadlines and have an unwavering focus on delivering solutions.
+                                        </div>
+                                        <div class="placeholder-footer">
+                                            <!--<div class="image-container">
+                                                <img src="images/jacobo.png" class="partner-image">
+                                            </div>-->
+                                            <div class="detail">
+                                                <span class="name">RAM PRAGYA</span>
+                                                <span class="company">CTO | mPulse Mobile</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            <div class="col-md-4">
+                                <div class="text-testimonial">
+                                    <div class="inner-wrapper">
+                                        <div class="description">
+                                            Quovantis was absolutely essential to the project, building a final product that functions well and looks great. 
+                                            They work quickly and efficiently, paying close attention to details. 
+                                        </div>
+                                    </div>
+                                    <div class="item-footer">
+                                        <div class="image-container">
+                                            <img src="images/jacobo.png" class="partner-image">
+                                        </div>
+                                        <div class="details">
+                                            <span class="name">Jacobo Lumbreras</span>
+                                            <span class="company">CPO | Catalog</span>
+                                        </div>
+                                    </div>
+                                </div> 
+                                <div class="bottom-testimonial">
+                                    <div class="text-testimonial">
+                                        <div class="bottom-description">
+                                            Quovantis Technologies is a deadline-oriented team that excels at structuring project timelines. 
+                                            Their transparent method of communicating has aided a positive partnership.
+                                        </div>
+                                        <div class="item-footer">
+                                            <div class="image-container">
+                                                <img src="images/claire.png" class="partner-image">
+                                            </div>
+                                            <div class="details">
+                                                <span class="name">Claire Portland</span>
+                                                <span class="company">CTO | Aecern</span>
+                                            </div>
+                                        </div>
+                                    </div>                                  
+                                </div>  
+                            </div>
+
+                            <div class="col-md-4">
+                                <div class="text-testimonial">
+                                    <div class="inner-wrapper">
+                                        <div class="description">
+                                            Quovantis was absolutely essential to the project, building a final product that functions well and looks great.
+                                            They work quickly and efficiently, paying close attention to details. 
+                                        </div>
+                                    </div>
+                                    <div class="item-footer">
+                                        <div class="image-container">
+                                            <img src="images/jesse.png" class="partner-image">
+                                        </div>
+                                        <div class="details">
+                                            <span class="name">Jesse Korosi</span>
+                                            <span class="company">Director | Workflow, Sim</span>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="bottom-testimonial">
+                                    <div class="text-testimonial">
+                                        <div class="bottom-description">
+                                            Quovantis was absolutely essential to the project, building a final product that functions well and looks great.
+                                            They work quickly and efficiently, paying close attention to details. 
+                                        </div>
+                                        <div class="item-footer">
+                                            <div class="image-container">
+                                                <img src="images/jonathan.png" class="partner-image">
+                                            </div>
+                                            <div class="details">
+                                                <span class="name">Jonathan Berent</span>
+                                                <span class="company">CEO | Lucid Reality</span>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>                 
+                    </div>
+              </div>
 		</div>
 	</div>
+        </div>
 </section>
 
 <footer id="footer">
