changes on homepage

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     </div>
                     <div class="cta">
                         <a class="action-cta" href="#">
-                            View case study →
+                            Find out how →
                         </a>
                     </div>
                 </div>
@@ -260,66 +260,66 @@
                     </div>
                     <div class="partners-logo">
                         <div class="row">
-                            <div class="col-xs-6 col-md-3">
+                            <div class="col-6 col-md-3">
                                 <div class="item-list">
                                     <img class="partner-1" src="images/partners-logo/microsoft-colored.png" alt="amazing-partner" />
                                 </div>
                             </div>
-                            <div class="col-xs-6 col-md-3">
+                            <div class="col-6 col-md-3">
                                 <div class="item-list">
                                     <img class="partner-2" src="images/partners-logo/synaptics.png" alt="amazing-partner" />
                                 </div>
                             </div>
-                            <div class="col-xs-6 col-md-3">
+                            <div class="col-6 col-md-3">
                                 <div class="item-list">
                                     <img class="partner-3" src="images/partners-logo/goibibo.png" alt="amazing-partner" />
                                 </div>
                             </div>
-                            <div class="col-xs-6 col-md-3">
+                            <div class="col-6 col-md-3">
                                 <div class="item-list">
                                     <img class="partner-4" src="images/partners-logo/hCentive.png" alt="amazing-partner" />
                                 </div>
                             </div>
                         </div>
                         <div class="row custom-row">
-                            <div class="col-xs-6 col-md-3">
+                            <div class="col-6 col-md-3">
                                 <div class="item-list">
                                     <img class="partner-5" src="images/partners-logo/jasonLearning.png" alt="amazing-partner" />
                                 </div>
                             </div>
-                            <div class="col-xs-6 col-md-3">
+                            <div class="col-6 col-md-3">
                                 <div class="item-list">
                                     <img class="partner-6" src="images/partners-logo/mobileum.png" alt="amazing-partner" />
                                 </div>
                             </div>
-                            <div class="col-xs-6 col-md-3">
+                            <div class="col-6 col-md-3">
                                 <div class="item-list">
                                     <img class="partner-7" src="images/partners-logo/Catalog_Logotypemark_RGB_Charcoal.png" alt="amazing-partner" />
                                 </div>
                             </div>
-                            <div class="col-xs-6 col-md-3">
+                            <div class="col-6 col-md-3">
                                 <div class="item-list">
                                     <img class="partner-8" src="images/partners-logo/linklabs.png" alt="amazing-partner" />
                                 </div>
                             </div>
                         </div>
                         <div class="row custom-row">
-                            <div class="col-xs-6 col-md-3">
+                            <div class="col-6 col-md-3">
                                 <div class="item-list">
                                     <img class="partner-9" src="images/partners-logo/mettl.png" alt="amazing-partner" />
                                 </div>
                             </div>
-                            <div class="col-xs-6 col-md-3">
+                            <div class="col-6 col-md-3">
                                 <div class="item-list">
                                     <img class="partner-10" src="images/partners-logo/patternx.png" alt="amazing-partner" />
                                 </div>
                             </div>
-                            <div class="col-xs-6 col-md-3">
+                            <div class="col-6 col-md-3">
                                 <div class="item-list">
                                     <img class="partner-11" src="images/partners-logo/mPulse.png" alt="amazing-partner" />
                                 </div>
                             </div>
-                            <div class="col-xs-6 col-md-3">
+                            <div class="col-6 col-md-3">
                                 <div class="item-list">
                                     <img class="partner-12" src="images/partners-logo/Canvera.png" alt="amazing-partner" />
                                 </div>
@@ -357,9 +357,7 @@
                                             They stick to deadlines and have an unwavering focus on delivering solutions.
                                         </div>
                                         <div class="placeholder-footer">
-                                            <!--<div class="image-container">
-                                                <img src="images/jacobo.png" class="partner-image">
-                                            </div>-->
+                                            <div class="play-btn"></div>                                                                                              
                                             <div class="detail">
                                                 <span class="name">RAM PRAGYA</span>
                                                 <span class="company">CTO | mPulse Mobile</span>
