updated new home page

--- a/index.html
+++ b/index.html
@@ -101,8 +101,7 @@
 						</h1>
 						<p class="sub-tag-line quovantis-sub-tag">
 							Whether you are a Fortune 500 company or an early stage startup,
-							our focus and commitment always</br>
-							remains the same.
+							our focus and commitment always remains the same.							
 						</p>
 					</div>
 				</div>
@@ -174,6 +173,19 @@
                                     The application won the Best Design Project trophy at India’s
                                     Best Design awards 2019.
                                 </p>
+                                <nav aria-label="Page navigation example">
+                                    <ul class="pagination justify-content-center">
+                                        <li class="page-item disabled">
+                                            <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+                                        </li>
+                                        <li class="page-item"><a class="page-link" href="#">1</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">2</a></li>
+                                        <li class="page-item"><a class="page-link" href="#">3</a></li>
+                                        <li class="page-item">
+                                            <a class="page-link" href="#">Next</a>
+                                        </li>
+                                    </ul>
+                                </nav>
                                 <a class="action-cta" href="#">
                                     View case study →
                                 </a>
@@ -366,7 +378,7 @@
                                     </div>
                                 </div>
                             <div class="col-md-4">
-                                <div class="text-testimonial">
+                                <div class="testimonial-mobile">
                                     <div class="inner-wrapper">
                                         <div class="description">
                                             Quovantis was absolutely essential to the project, building a final product that functions well and looks great. 
@@ -475,7 +487,7 @@
       </div>
 </section>
 
-<footer class="footer">
+<!--<footer class="footer">
 	<div class="container">
 		<div class="row footer-wrapper">
 			<div class="col-md-4">
@@ -492,7 +504,7 @@
 					</a>
 				</div>
 			</div>
-			<div class="col-md-3 col-xs-9">
+			<div class="col-md-3">
 				<div class="content-right">
 					<div class="about-heading">ABOUT US</div>
 					<div class="link">
@@ -532,7 +544,84 @@
 			</div>
 		</div>
 	</div>
-</footer>
+</footer>-->
+    <div class="footer-wrapper">
+        <div class="container">
+            <div class="row">
+                <div class="footer-content">
+                    <div class="col-sm-4">
+                        <div class="footer-text">
+                            <h2 class="heading">
+                                Got an interesting project?
+                            </h2>
+                            <p class="footer-para">
+                                Because we got a rockstar team! Tell us </br>
+                                about your idea.
+                            </p>
+                            <a class="get-in-btn" href="/contact-us#talk-to-us">
+                                Get in touch
+                            </a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="content-right">
+                            <div class="about-heading">ABOUT US</div>
+                            <div class="link">
+                                <div><a class="link" href="/what-we-do">What we do</a></div>
+                                <div><a class="link" href="/who-we-are">Who we are</a></div>
+                                <div><a class="link" href="/our-work">Our work</a></div>
+                                <div><a class="link" href="/our-review">Reviews</a></div>
+                                <div>
+                                    <a class="link"
+                                       href="/Resources/csr/Quovantis_CSR_template.pdf"
+                                       target="_blank">Social Impact</a>
+                                </div>
+                                <div><a class="link" href="/careers">Careers</a></div>
+                                <div>
+                                    <a class="link" href="http://blogs.quovantis.com/"
+                                       target="_blank">Blog</a>
+                                </div>
+                                <div><a class="link" href="/contact-us">Contact us</a></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="content-end">
+                            <div class="about-heading">OUR FOCUS</div>
+                            <div class="link">
+                                <div>
+                                    <a class="link"
+                                       href="/digital-healthcare-solutions">Healthcare</a>
+                                </div>
+                                <div>
+                                    <a class="link" href="/hrtech">HRTech</a>
+                                </div>
+                                <div>
+                                    <a class="link" href="/martech">MarTech</a>
+                                </div>
+                                <div>
+                                    <a class="link" href="/edtech">EdTech</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-4">
+                    <div class="privacy">
+                        <div class="copyright">Privacy |  ©2020 Quovantis Technologies.</div>
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="social-icons">
+                        <a class="icon linkedin" href="http://www.linkedin.com/company/quovantis-technologies" target="_blank"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 
+  
 </body>
 </html>
