mpulse first section

--- a/pages/mpulse/mpulse.html
+++ b/pages/mpulse/mpulse.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
@@ -14,7 +14,16 @@
 
 <main id="mpulse" class="mpulse">
 	<section class="banner">
-
+        <div class="container">
+            <div class="banner-content">
+                <div class="tag-line">
+                    <h1 class="title-tag">mPulse</h1>
+                </div>
+                <div class="sub-tag-line">
+                    <h2 class="subtitle-tag">A HIPAA compliant mobile engagement solution for healthcare providers </h2>
+                </div>
+            </div>
+        </div>
 	</section>
 	<section class="what-we-did">
 		<div class="container">
