mpulse first section

--- a/pages/mpulse/mpulse.html
+++ b/pages/mpulse/mpulse.html
@@ -2,28 +2,29 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport"
-	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<meta
+		content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+		name="viewport">
+	<meta content="ie=edge" http-equiv="X-UA-Compatible">
 	<title>Quovantis Website</title>
-	<link rel="stylesheet" href="mpulse.css">
+	<link href="../../styles/styles.css" rel="stylesheet">
+	<link href="mpulse.css" rel="stylesheet">
 </head>
 <body>
 
 <header class="header"></header>
 
-<main id="mpulse" class="mpulse">
+<main class="mpulse" id="mpulse">
 	<section class="banner">
-        <div class="container">
-            <div class="banner-content">
-                <div class="tag-line">
-                    <h1 class="title-tag">mPulse</h1>
-                </div>
-                <div class="sub-tag-line">
-                    <h2 class="subtitle-tag">A HIPAA compliant mobile engagement solution for healthcare providers </h2>
-                </div>
-            </div>
-        </div>
+		<div class="container">
+			<div class="banner-content">
+				<h1 class="title-tag">mPulse</h1>
+				<h2 class="subtitle-tag">
+					A HIPAA compliant mobile engagement solution for healthcare
+					providers
+				</h2>
+			</div>
+		</div>
 	</section>
 	<section class="what-we-did">
 		<div class="container">
