lucid reality second section

--- a/pages/lucid-reality/lucid-reality.html
+++ b/pages/lucid-reality/lucid-reality.html
@@ -4,19 +4,104 @@
 	<meta charset="UTF-8">
 	<title>Quovantis Website</title>
 	<link href="lucid-reality.css" rel="stylesheet" />
+	<link href="../../styles/styles.css" rel="stylesheet" />
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 </head>
 <body>
-<header class="header">
 
+<header id="header-common">
+	<div class="header-container">
+		<a class="logo-wrapper" href="/">
+			<img class="logo-wrapper__Quovantis-logo"
+			     src="../../images/quovantis-logo.png">
+		</a>
+		<nav class="header-navigation">
+			<ul class="header-navigation__wrapper">
+				<li class="nav-section">
+					<a class="nav-section__link">Who we are</a>
+				</li>
+				<li class="nav-section">
+					<a class="nav-section__link">What we do</a>
+				</li>
+				<li class="nav-section">
+					<a class="nav-section__link">Our Work</a>
+				</li>
+				<li class="nav-section">
+					<a class="nav-section__link header-btn primary-btn-sm">Get in
+						touch</a>
+				</li>
+				<li class="nav-section">
+					<a class="nav-section__link header-bottom-navigation">
+						<img alt="nav-icon" class="nav-hamburger-icon"
+						     src="../../images/menu.svg" />
+					</a>
+				</li>
+			</ul>
+		</nav>
+	</div>
 </header>
-<main class="lucid-reality" id="lucid-reality">
-	<section class="banner">
-		<img src="https://i.picsum.photos/id/513/1920/1080.jpg" alt="">
-	</section>
-	<section class="what-we-did">
 
+<main class="lucid-reality" id="lucid-reality">
+
+	<section class="banner">
+		<div class="inner-container">
+			<h1 class="title">Lucid Reality</h1>
+			<h2 class="sub-title">
+				Unlocking a whole new world for expert and amateur lucid dreamers
+			</h2>
+		</div>
 	</section>
+
+	<section class="what-we-did">
+		<div class="inner-container">
+			<div class="flex-items">
+				<div class="item">
+					<p class="title">What we did:</p>
+					<ul>
+						<li><a href="">UX</a></li>
+						<li><a href="">App Development</a></li>
+						<li><a href="">Healthtech</a></li>
+						<li><a href="">Product Engineering</a></li>
+					</ul>
+				</div>
+				<div class="item">
+					<p class="title">Developed on:</p>
+					<ul>
+						<li><a href="">
+							<img alt="" src="">
+						</a></li>
+						<li><a href="">
+							<img alt="" src="">
+						</a>
+						</li>
+						<li><a href="">Healthtech</a></li>
+						<li><a href="">Product Engineering</a></li>
+					</ul>
+				</div>
+				<div class="item">
+					<p class="title">Share on:</p>
+					<ul>
+						<li>
+							<a href="">
+								<i class="icon"></i>
+							</a>
+						</li>
+						<li>
+							<a href="">
+								<i class="icon"></i>
+							</a>
+						</li>
+						<li>
+							<a href="">
+								<i class="icon"></i>
+							</a>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</section>
+
 	<section class="an-overview"></section>
 	<section class="the-solution"></section>
 	<section class="our-approach"></section>
